@@ -1,4 +1,6 @@
 1.6.17
+	* Fix ldns_dnssec_zone_new_frm_fp_l to allow NSEC3 (or its RRSIG)
+	  covering an empty non terminal as the last line. 
 
 1.6.16	2012-11-13
 	* Fix Makefile to build pyldns with BSD make
